examples/demos/failing/94_fail_runtime_division_by_zero.hing
shuru
num a = 10
num b = 0
num c = a / b
bol c
khatam
